# electricity-optimizer

./: .dockerignore  .env.example  .env.test  .gitignore  .gitleaks.toml  .hive-mind-config.json  .mcp.json  .notion_hub_ids.json  .notion_sync_config.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_TRACKING.md  Dockerfile  FINAL_STATUS.md  HIVE_MIND_STATUS.md  LAUNCH_READY_STATUS.md  MVP_STATUS.md  Makefile  PHASE3_COMPLETION_REPORT.md  PHASE3_SUMMARY.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  REMINDERS.md  TODO.md  agent-consolidation-plan.md  auto-rate-switcher-design.md  auto-rate-switcher-plan.md  claude-code-environment-snapshot.md  docker-compose.prod.yml  docker-compose.yml  findings.md  perf-optimization.md  progress.md  render.yaml  requirements-ml.txt  ruff.toml  (+2 more)
backend/: .env.example  DEPLOYMENT_CHECKLIST.md  Dockerfile  OPTIMIZATION_SUMMARY.md  PERFORMANCE_OPTIMIZATIONS.md  STRIPE_INTEGRATION.md  __init__.py  app_factory.py  gunicorn_config.py  main.py  observability.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.prod.txt  requirements.txt  start.sh
backend/api/: __init__.py  dependencies.py
backend/api/v1/: __init__.py  affiliate.py  agent.py  agent_switcher.py  alerts.py  auth.py  beta.py  billing.py  cca.py  community.py  community_solar.py  compliance.py  connections.py  export.py  feedback.py  forecast.py  gas_rates.py  health.py  heating_oil.py  internal.py  neighborhood.py  notifications.py  prices.py  prices_analytics.py  prices_sse.py  propane.py  public_rates.py  rate_changes.py  recommendations.py  referrals.py  regulations.py  reports.py  savings.py  suppliers.py  user.py  user_supplier.py  users.py  utility_accounts.py  utility_discovery.py  water.py  (+1 more)
backend/auth/: __init__.py  jwt_handler.py  middleware.py  neon_auth.py  password.py  supabase_auth.py
backend/compliance/: __init__.py  gdpr.py  repositories.py
backend/config/: database.py  secrets.py  settings.py
backend/integrations/: __init__.py  utilityapi.py  weather_service.py
backend/integrations/pricing_apis/: __init__.py  base.py  cache.py  (+6 more)
backend/lib/: circuit_breaker.py  tracing.py
backend/middleware/: rate_limiter.py  security_headers.py  tracing.py
backend/migrations/: 002_gdpr_auth_tables.sql  003_reconcile_schema.sql  004_performance_indexes.sql  005_observation_tables.sql  006_multi_utility_expansion.sql  007_user_supplier_accounts.sql  008_connection_feature.sql  009_email_oauth_tokens.sql  010_utility_type_index.sql  011_utilityapi_sync_columns.sql  012_user_savings.sql  013_user_profile_columns.sql  014_alert_tables.sql  015_notifications.sql  016_feature_flags.sql  017_additional_indexes.sql  018_nationwide_defaults.sql  019_nationwide_suppliers.sql  020_price_query_indexes.sql  021_fix_supplier_api_available.sql  022_user_supplier_composite_index.sql  023_db_audit_indexes.sql  024_payment_retry_history.sql  025_data_cache_tables.sql  026_notifications_metadata.sql  027_model_config.sql  028_feedback_table.sql  029_notification_delivery_tracking.sql  030_model_versioning_ab_tests.sql  031_agent_tables.sql  032_notification_error_message.sql  033_model_predictions_ab_assignments.sql  034_portal_credentials.sql  035_backfill_neon_auth_users.sql  036_performance_indexes.sql  037_additional_performance_indexes.sql  038_utility_accounts.sql  039_referrals.sql  040_gas_supplier_seed.sql  041_community_solar_programs.sql  (+26 more)
backend/models/: __init__.py  available_plan.py  community.py  connections.py  consent.py  meter_reading.py  model_config.py  model_version.py  notification.py  observation.py  price.py  region.py  regulation.py  supplier.py  switch_audit_log.py  switch_execution.py  user.py  user_agent_settings.py  user_plan.py  user_supplier.py  utility.py  utility_account.py
backend/repositories/: __init__.py  base.py  forecast_observation_repository.py  model_config_repository.py  notification_repository.py  price_repository.py  supplier_repository.py  user_repository.py  utility_account_repository.py
backend/routers/: predictions.py
backend/scripts/: backfill_users.py  db_maintenance.py
backend/services/: __init__.py  ab_test_service.py  affiliate_service.py  agent_service.py  alert_renderer.py  alert_service.py  analytics_service.py  arcadia_service.py  bill_parser.py  cca_service.py  community_service.py  community_solar_service.py  connection_analytics_service.py  connection_service.py  connection_sync_service.py  contract_lifecycle_service.py  data_persistence_helper.py  data_quality_service.py  dunning_service.py  email_oauth_service.py  email_scanner_service.py  email_service.py  energybot_service.py  feature_flag_service.py  forecast_service.py  gas_rate_service.py  geocoding_service.py  heating_oil_service.py  hnsw_vector_store.py  kpi_report_service.py  learning_service.py  maintenance_service.py  market_intelligence_service.py  model_version_service.py  neighborhood_service.py  notification_dispatcher.py  notification_service.py  observation_service.py  optimization_report_service.py  plan_scorer.py  (+23 more)
backend/tests/: __init__.py  conftest.py  test_ab_test_service.py  test_affiliate_service.py  test_agent_service.py  test_agent_switcher_api.py  test_alert_renderer.py  test_alert_service.py  test_analytics_service.py  test_api.py  test_api_alerts.py  test_api_beta.py  test_api_billing.py  test_api_compliance.py  test_api_health.py  test_api_internal.py  test_api_model_versions.py  test_api_predictions.py  test_api_prices_analytics.py  test_api_recommendations.py  test_api_regulations.py  test_api_user.py  test_arcadia_service.py  test_auth.py  test_bill_parser.py  test_bill_upload.py  test_cca_service.py  test_circuit_breaker.py  test_community_api.py  test_community_service.py  test_community_solar_service.py  test_config.py  test_connection_analytics.py  test_connection_service.py  test_connections.py  test_contract_lifecycle_service.py  test_data_quality_service.py  test_dunning_service.py  test_email_attachment_parsing.py  test_email_oauth.py  (+100 more)
backend/utils/: encryption.py
(+4942 files in other folders)
