[project]
name = "electricity-optimizer-backend"
version = "0.1.0"
description = "AI-powered electricity price optimization platform - Backend API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Electricity Optimizer Team"}
]
keywords = ["electricity", "optimization", "fastapi", "api", "energy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise-without-from-inside-except (widespread, separate fix track)
    "B905",   # zip without strict parameter
    "C901",   # too complex
    "E402",   # module-import-not-at-top (compliance.py pattern)
    "SIM102", # collapsible-if (style preference)
    "SIM103", # needless-bool (style preference)
    "SIM105", # suppressible-exception (contextlib.suppress preference)
    "SIM108", # use-ternary-operator (readability preference)
    "ARG001", # unused-function-argument (FastAPI Depends pattern)
    "F821",   # undefined-name (forward refs in type hints)
    "UP046",  # PEP 695 type parameters (larger refactor, separate track)
    "UP047",  # PEP 695 generic functions (larger refactor, separate track)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["ARG001", "ARG002", "ARG005", "S101", "F841", "SIM117", "B007"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "config", "models", "repositories", "services", "api", "routers"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "asyncpg.*",
    "prometheus_client.*",
    "sentry_sdk.*",
    "structlog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-ra",
]
markers = [
    "asyncio: mark test as async",
    "slow: mark test as slow running",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "**/__init__.py",
    "alembic/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
show_missing = true

[tool.bandit]
exclude_dirs = ["tests", "alembic"]
skips = ["B101"]  # assert_used

# NOTE: Black is intentionally NOT configured here. ruff-format is the
# canonical formatter (see .pre-commit-config.yaml). The previous [tool.black]
# block was vestigial; it created reader confusion and a latent conflict if
# anyone ran `black .` manually. (Best-practices audit P2-7 / "Tooling debt")
